k8s/overlays/dev/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homecare-app
spec:
  replicas: 1
